# fastapi-bank

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/application/commands/: create_account.py  delete_account.py  deposit_transaction.py  transfer_transaction.py  update_account.py  withdraw_transaction.py
app/application/queries/: get_account.py  get_account_list.py  get_account_transaction_list.py  get_transaction_list.py
app/domain/accounts/: account.py  account_repository.py  exceptions.py  schema.py
app/domain/transactions/: exceptions.py  schema.py  transaction.py  transaction_repository.py
app/infrastructure/: app.py  config.py  database.py  logging_config.py
app/infrastructure/migrations/: env.py
app/infrastructure/migrations/versions/: c5bf472fcfa5_.py
app/infrastructure/respositories/: account_repository.py  transaction_repository.py
app/presentation/endpoints/: accounts.py  transactions.py
app/presentation/schema/: account.py  transaction.py
deployment/: Dockerfile  entrypoint.sh
tests/: conftest.py  fixtures.py
tests/integration/: test_account_transactions.py  test_accounts.py  test_healthcheck.py  test_transactions.py
tests/unit/: test_account_repository.py
tests/unit/commands/: test_create_account.py  test_create_account_command.py  test_delete_account.py  test_deposit_transaction.py  test_transfer_transaction.py  test_update_account.py  test_withdraw_transaction.py
tests/unit/queries/: test_account_transaction.py  test_transaction.py
tests/unit/repositories/: test_account_repository.py  test_transaction_repository.py
