[tool.poetry]
name = "fastapi-bank"
version = "0.1.0"
description = ""
authors = ["Izabela Kaczyńska <izabela@devsoft.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
pydantic = "^2.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.1"
uvicorn = "^0.27.0.post1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
